libbpf-sys/src/bpf.rs

#[test]
fn bindgen_test_layout_max_align_t() {
    //assert_eq!(::std::mem::size_of::<max_align_t>() , 32usize , concat ! (
               //"Size of: " , stringify ! ( max_align_t ) ));
    // FIXME: For some reason bindgen generates 32, as above. 24 looks correct.
    assert_eq!(::std::mem::size_of::<max_align_t>() , 24usize , concat ! (
               "Size of: " , stringify ! ( max_align_t ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const max_align_t ) ) .
                __clang_max_align_nonce1 as * const _ as usize } , 0usize ,
                concat ! (
                "Alignment of field: " , stringify ! ( max_align_t ) , "::" ,
                stringify ! ( __clang_max_align_nonce1 ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const max_align_t ) ) .
                __clang_max_align_nonce2 as * const _ as usize } , 16usize ,
                concat ! (
                "Alignment of field: " , stringify ! ( max_align_t ) , "::" ,
                stringify ! ( __clang_max_align_nonce2 ) ));
}
impl Clone for max_align_t {
    fn clone(&self) -> Self { *self }
}
extern "C" {
    pub fn bpf_create_map(map_type: bpf_map_type,
                          key_size: ::std::os::raw::c_int,
                          value_size: ::std::os::raw::c_int,
                          max_entries: ::std::os::raw::c_int,
                          map_flags: __u32) -> ::std::os::raw::c_int;
}
#[cfg(kernelv412)]
extern "C" {
    pub fn bpf_create_map_in_map(map_type: bpf_map_type,
                                 key_size: ::std::os::raw::c_int,
                                 inner_map_fd: ::std::os::raw::c_int,
                                 max_entries: ::std::os::raw::c_int,
                                 map_flags: __u32) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_load_program(type_: bpf_prog_type, insns: *const bpf_insn,
                            insns_cnt: usize,
                            license: *const ::std::os::raw::c_char,
                            kern_version: __u32,
                            log_buf: *mut ::std::os::raw::c_char,
                            log_buf_sz: usize) -> ::std::os::raw::c_int;
}
#[cfg(kernelv412)]
extern "C" {
    pub fn bpf_verify_program(type_: bpf_prog_type, insns: *const bpf_insn,
                              insns_cnt: usize,
                              strict_alignment: ::std::os::raw::c_int,
                              license: *const ::std::os::raw::c_char,
                              kern_version: __u32,
                              log_buf: *mut ::std::os::raw::c_char,
                              log_buf_sz: usize) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_map_update_elem(fd: ::std::os::raw::c_int,
                               key: *const ::std::os::raw::c_void,
                               value: *const ::std::os::raw::c_void,
                               flags: __u64) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_map_lookup_elem(fd: ::std::os::raw::c_int,
                               key: *const ::std::os::raw::c_void,
                               value: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_map_delete_elem(fd: ::std::os::raw::c_int,
                               key: *const ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_map_get_next_key(fd: ::std::os::raw::c_int,
                                key: *const ::std::os::raw::c_void,
                                next_key: *mut ::std::os::raw::c_void)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_obj_pin(fd: ::std::os::raw::c_int,
                       pathname: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_obj_get(pathname: *const ::std::os::raw::c_char)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_prog_attach(prog_fd: ::std::os::raw::c_int,
                           attachable_fd: ::std::os::raw::c_int,
                           type_: bpf_attach_type,
                           flags: ::std::os::raw::c_uint)
     -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn bpf_prog_detach(attachable_fd: ::std::os::raw::c_int,
                           type_: bpf_attach_type) -> ::std::os::raw::c_int;
}
#[cfg(kernelv412)]
extern "C" {
    pub fn bpf_prog_test_run(prog_fd: ::std::os::raw::c_int,
                             repeat: ::std::os::raw::c_int,
                             data: *const ::std::os::raw::c_void, size: __u32,
                             data_out: *mut ::std::os::raw::c_void,
                             size_out: *mut __u32, retval: *mut __u32,
                             duration: *mut __u32) -> ::std::os::raw::c_int;
}
